force-app/main/default/objects/CarConfigueQuote__c/CarConfigueQuote__c.object-meta.xml
<CustomObject>
    <description>리드 견적</description>
    <label>리드견적</label>
    <nameField>
        <label>리드견적 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>리드견적</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>