force-app/main/default/objects/CarConfigueQuote__c/fields/Car_Name__c.field-meta.xml
<CustomField>
    <fullName>Car_Name__c</fullName>
    <label>모델명</label>
    <length>60</length>
    <type>Text</type>
</CustomField>