force-app/main/default/objects/CarConfigueQuote__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>컬러</label>
    <length>60</length>
    <type>Text</type>
</CustomField>