force-app/main/default/objects/CarConfigueQuote__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>리드에서 들어온 견적을 옵티에서 쿼트 생성 시 전달 해줌</description>
    <label>기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>리드견적</relationshipLabel>
    <relationshipName>CarConfigueQuote</relationshipName>
    <type>Lookup</type>
</CustomField>