force-app/main/default/objects/CarConfigueQuote__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>옵션</label>
    <length>255</length>
    <type>Text</type>
</CustomField>