force-app/main/default/objects/CarConfigueQuote__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>제품</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>리드견적</relationshipLabel>
    <relationshipName>CarConfigueQuote</relationshipName>
    <type>Lookup</type>
</CustomField>