force-app/main/default/objects/CarConfigueQuote__c/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <label>트림</label>
    <length>60</length>
    <type>Text</type>
</CustomField>